sonar fixes